--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "@octokit/rest": "^18.1.0"
   }
 }
