--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "scripts": {
-    "start": "webpack serve --mode 'development'"
+    "start": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.2",
+    "html-webpack-plugin": "^5.1.0",
+    "mini-css-extract-plugin": "^1.3.6",
     "ts-loader": "^8.0.16",
     "typescript": "^4.1.3",
     "webpack": "^5.21.2",
